templates/resurface_template.yaml
---
# Source: resurface/charts/kubernetes-ingress/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kubernetes-ingress
  namespace: default
  labels:
    app.kubernetes.io/name: kubernetes-ingress
    helm.sh/chart: kubernetes-ingress-1.39.2
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.11.3
  annotations:
spec:
  
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      appProtocol: http
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      appProtocol: https
      targetPort: https
    - name: minioc-tcp
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app.kubernetes.io/name: kubernetes-ingress
    app.kubernetes.io/instance: release-name
  externalIPs:
---
# Source: resurface/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coordinator
  labels:
    helm.sh/chart: resurface-3.7.0
    app.kubernetes.io/name: resurface
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "3.6.102"
    app.kubernetes.io/managed-by: Helm
spec:
  clusterIP: None
  ports:
    - name: db-svcport
      port: 7700
      targetPort: db
  selector:
    app.kubernetes.io/name: resurface
    app.kubernetes.io/instance: release-name
    db.resurface.io/role: coordinator
---
# Source: resurface/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker
  labels:
    helm.sh/chart: resurface-3.7.0
    app.kubernetes.io/name: resurface
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "3.6.102"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: fluke-svcport
      port: 7701
      targetPort: fluke
  selector:
    app.kubernetes.io/name: resurface
    app.kubernetes.io/instance: release-name
---
# Source: resurface/charts/kubernetes-ingress/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kubernetes-ingress
  namespace: default
  labels:
    app.kubernetes.io/name: kubernetes-ingress
    helm.sh/chart: kubernetes-ingress-1.39.2
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.11.3
spec:
  replicas: 2
  minReadySeconds: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-ingress
      app.kubernetes.io/instance: release-name
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubernetes-ingress
        app.kubernetes.io/instance: release-name
    spec:
      enableServiceLinks: true
      serviceAccountName: release-name-kubernetes-ingress
      terminationGracePeriodSeconds: 60
      dnsPolicy: ClusterFirst
      securityContext:
        runAsNonRoot: true
        runAsUser:  1000
        runAsGroup: 1000
      containers:
        - name: kubernetes-ingress-controller
          image: "haproxytech/kubernetes-ingress:1.11.3"
          imagePullPolicy: IfNotPresent
          args:
          - --default-ssl-certificate=default/release-name-kubernetes-ingress-default-cert
          - --configmap=default/release-name-kubernetes-ingress
          - --http-bind-port=8080
          - --https-bind-port=8443
          - --ingress.class=haproxy
          - --publish-service=default/release-name-kubernetes-ingress
          - --log=info
          - --configmap-tcp-services=resurface/haproxy-extra-ports
          - --configmap-errorfiles=resurface/haproxy-errorfiles
          securityContext:
            runAsNonRoot: true
            runAsUser:  1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
            - name: stat
              containerPort: 1024
              protocol: TCP
            - name: minioc-tcp
              containerPort: 9001
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 1042
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 1042
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 20
            httpGet:
              path: /healthz
              port: 1042
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 400Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
              subPath: tmp
            - name: tmp
              mountPath: /run
              subPath: run
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 64Mi
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/arch
          operator: Equal
          value: arm64
---
# Source: resurface/templates/stateful-coordinator.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-resurface-coordinator
  labels:
    helm.sh/chart: resurface-3.7.0
    app.kubernetes.io/name: resurface
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "3.6.102"
    app.kubernetes.io/managed-by: Helm
spec:
  serviceName: coordinator
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: resurface
      app.kubernetes.io/instance: release-name
      db.resurface.io/role: coordinator
  template:
    metadata:
      annotations:
        checksum/config: a507f5b913f48f414b578f3b4e99ef868b1268bb0fbb6c12d9293b5c4b6cefdf
      labels:
        app.kubernetes.io/name: resurface
        app.kubernetes.io/instance: release-name
        db.resurface.io/role: coordinator
    spec:
      serviceAccountName: resurface-sa
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: config-volume
          configMap:
            name: trino-coordinator-config
            items:
              - key: config.properties
                path: config.properties
        
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/arch
          operator: Equal
          value: arm64
      containers:
        - name: coordinator
          image: resurfaceio/resurface:3.6.102
          ports:
            - name: db
              containerPort: 7700
            - name: fluke
              containerPort: 7701
          volumeMounts:
            - name: config-volume
              mountPath: /opt/trino/etc/config.properties
              subPath: config.properties
            
            - name: release-name-resurface-pvc
              mountPath: /db

          resources:
            requests:
              cpu: 6
              memory: 18Gi
  volumeClaimTemplates:
    - metadata:
        name: release-name-resurface-pvc
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 20Gi
---
# Source: resurface/charts/kubernetes-ingress/templates/controller-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: haproxy
  labels:
    app.kubernetes.io/name: kubernetes-ingress
    helm.sh/chart: kubernetes-ingress-1.39.2
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.11.3
spec:
  controller: haproxy.org/ingress-controller/haproxy
---
# Source: resurface/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-resurface-ingress
  annotations:
    haproxy.org/load-balance: "roundrobin"
    haproxy.org/backend-config-snippet: |
      acl no_trailing_slash path -m str /fluke
      http-request redirect code 301 location /fluke/ if no_trailing_slash
    haproxy.org/path-rewrite: /fluke/(.*) /\1
spec:
  ingressClassName: haproxy
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: coordinator
                port:
                  name: db-svcport
          - path: "/fluke"
            pathType: Prefix
            backend:
              service:
                name: worker
                port:
                  name: fluke-svcport
---
# Source: resurface/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-resurface-test-connection"
  labels:
    helm.sh/chart: resurface-3.7.0
    app.kubernetes.io/name: resurface
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "3.6.102"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:
        - 'http://coordinator.default:7700/'
        - 'http://worker.default:7701/'
  restartPolicy: Never
